Fixed margin top on mobile

--- a/content/style/main.css
+++ b/content/style/main.css
@@ -233,7 +233,7 @@ footer{
 @media (max-width: 767.98px) {
 
 	body{
-		margin-top: 85px;
+		margin-top: 85px !important;
 	}
 
 	#title-img{
